--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# Application name
 spring.application.name=linkedin-clone-backend
+
+# --------------------
+# Database Configuration (MySQL)
+# --------------------
+spring.datasource.url=jdbc:mysql://localhost:3306/linkedin_clone
+spring.datasource.username=root
+spring.datasource.password=dhiraj@7179
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# --------------------
+# JPA / Hibernate Configuration
+# --------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
